[package]
name = "nyaddec-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv= "0.15"
chrono = { version = "0.4", features = ["serde"] }
log= "0.4"
fern= "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"